# PopRT

./: LICENSE  README.md  index.html  index.md  quick_start.html
1.0.2/: cxx_api.html  (+10 more)
examples/: CMakeLists.txt  README.md  convert_compile_and_run.py  dynamic_batch_size.py  example_lightrunner.cpp  flops_of_model.py  host_concat_runner_example.py  lightruner_example.py  lightrunner_example.py  model_runner_example.cpp  poprt_run_popef.py  print_tile_mapping.py  simple_overlapio.py  test_examples.py
examples/bert/: README.md  test_bertsquad.py  tokenization.py
examples/custom_op_example/: build.sh  create_onnx_with_custom_op.py  custom_shape_inference.py
examples/custom_pattern_example/: .gitignore  Makefile  build.sh  replace_relu_with_neg_pattern.cpp  test_custom_pattern.py
examples/custom_transform_example/: Makefile  build.sh  ir_serialise_transform.cpp  test_custom_transform.py
examples/e2e_example/: README.md  googlenet.py
examples/fp8_quantization_onnxruntime/: .gitignore  README.md  analyze_fp8.py  requirements.txt
examples/fp8_quantization_onnxruntime/utils/: convert_compile_and_run.py  eval_imagenet.py  ppq_quantize.py
examples/model_fusion/: config.yaml  run.py
examples/packed_bert_example/: .gitignore  README.md  add_position_ids.py  packed_bert_example.py  packing_utils.py  requirements.txt  run.sh
examples/packed_deberta_example/: README.md  modify_deberta.py  packed_deberta_example.py  requirements.txt  run.sh
examples/resnet50/: README.md  data_preprocess.py  test_resnet.py
examples/resnet50/data/: val_official_clean.csv
(+291 files in other folders)
